🐛(frontend) fix select dropdown clipped in sale tunnel right column
SaleTunnel was hiding overflowing elements in the right
part, so we need to update the overflow style attribute
to handle this.

--- a/src/frontend/js/components/SaleTunnel/_styles.scss
+++ b/src/frontend/js/components/SaleTunnel/_styles.scss
@@ -31,8 +31,11 @@
     &__left,
     &__right {
       flex: 1;
-      overflow: hidden;
       position: relative;
+    }
+
+    &__left {
+      overflow: hidden;
     }
 
     &__column {
